# scholarshipManager

./: .gitignore  README.md  docker-compose.yml  index.html
assets/: index-D_uqK8vm.js  index-DdJyQWOT.css
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 012679c40075_initial_schema.py  1e8c4a9f6b21_add_cohort_overrides_and_issue_queue.py  7b0e6f7f0c9a_add_demo_email_intake_and_budgets.py
backend/app/: main.py
backend/app/api/: dependencies.py  routes_auth.py  routes_cohort_issues.py  routes_imports.py  routes_rosters.py  routes_submissions.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  audit_log.py  core.py  imports.py  roster.py  submission.py  user.py
backend/app/schemas/: auth.py  availability.py  cohort_issues.py  imports.py  roster.py  submissions.py
backend/app/scripts/: import_csv.py  seed.py  seed_demo_budgets.py
backend/app/services/: auth.py  budgets.py  config_values.py  documents.py  email_demo.py  email_poller.py  email_text.py  emailer.py  importer.py  openai_email_parser.py  submission_workflow.py
backend/storage/submissions/07d725d0-44af-4f93-b889-2fbcfc95cc89/: R01574654_Ryan_Hughes_Adjustment.xlsx
backend/storage/submissions/6e9a44f0-7dfe-40fe-bdc0-f4632fac4df2/: R01528570_Troy_Sudbrook_Adjustment.xlsx
backend/storage/submissions/73fa6981-aa19-44f6-9b88-69621347ce79/: R01646560_Laura_Acuna_Adjustment.xlsx
backend/templates/: Adjustment_of_Aid_Template_2526.xlsx
docs/: build-handoff-addendum-2-demo-mvp.md  (+2 more)
(+22 files in other folders)
