[project]
name = "athletic-scholarship-api"
version = "0.1.0"
description = "Phase 1 backend for the athletic scholarship management system"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.1",
  "argon2-cffi>=23.1.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.12",
  "itsdangerous>=2.2.0",
  "openpyxl>=3.1.5",
  "psycopg[binary]>=3.2.6",
  "pydantic-settings>=2.8.1",
  "python-multipart>=0.0.20",
  "reportlab>=4.4.1",
  "sqlalchemy>=2.0.40",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501", "I001"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
